# tap-sdk-py

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
test/: test.py
zakotap/: __init__.py  client.py
zakotap/utils/: __init__.py  _type.py  event.py  response.py  websocket.py
