[project]
name = "tap-sdk-py"
version = "1.0.0"
description = "Zako tap server sdk for python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "eventemitter>=0.2.0",
    "requests>=2.32.4",
    "websockets>=15.0.1",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"